--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    padding-top: 10px;
 }
 
 header {
@@ -16,6 +17,7 @@ main {
     margin-left: 25%;
     margin-top: 20px;
     width: 50%;
+    font-weight: bold;
 }
 
 #data {
@@ -24,14 +26,53 @@ main {
 
 h1 {
     font-size: 30px;
-    font-family: 'Times New Roman', Times, serif;
+    padding-top: 5px;
 }
+
 img {
 
       width: 350px;
       height: 300px;
       padding-top: 10px;
 }
+
+.yellowbacktext {
+    background-color: yellow;
+}
+th {
+    color: rgb(255,255,255);
+    background-color: darkblue;
+    font-size: 15px;
+}
+
+.smallcolumn {
+
+width: 200px;
+text-align: center;
+}
+.largecolumn {
+    width: 400px;
+    text-align: center;
+}
+
+.color-row {
+    background-color: lightblue;
+}
+
 figcaption {
     font-size: 12px;
+}
+
+table {
+    margin top: 10px;
+}
+
+footer {
+    margin-left: 25%;
+    width: 300px;
+    height: 200px;
+}
+
+h3 {
+    color: rgba(0, 0, 0, 0.5);
 }
